--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".user.login.LoginActivity">
+        </activity>
+        <activity android:name=".user.register.RegisterActivity">
+        </activity>
     </application>
 
 </manifest>
