--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     // gson转换器
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.android.support:design:25.1.1'
+
+    // 圆形图片
+    compile 'com.pkmmte.view:circularimageview:1.1'
 }
