--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
 
     // 圆形图片
     compile 'com.pkmmte.view:circularimageview:1.1'
+
+    // picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
