--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,8 @@
         </activity>
         <activity android:name=".treasure.detail.TreasureDetailActivity">
         </activity>
+        <activity android:name=".treasure.hide.HideTreasureActivity">
+        </activity>
     </application>
 
 </manifest>
