--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,8 @@
         </activity>
         <activity android:name=".treasure.hide.HideTreasureActivity">
         </activity>
+        <activity android:name=".user.account.AccountActivity">
+        </activity>
     </application>
 
 </manifest>
