--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.feicuiedu.treasure_20170327">
+          package="com.feicuiedu.treasure_20170327"
+          xmlns:tools="http://schemas.android.com/tools">
 
     <!-- 百度地图所需权限 -->
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/>
@@ -33,7 +34,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
 
         <!-- 开发秘钥 -->
         <meta-data
